--- a/compose.yaml
+++ b/compose.yaml
@@ -1,7 +1,7 @@
 services:
   db:
     image: postgres
-    restart: always
+    # restart: always
     environment:
       POSTGRES_PASSWORD: example
     volumes:
@@ -11,7 +11,7 @@ services:
  
   adminer:
     image: adminer
-    restart: always
+    # restart: always
     ports:
       - 8080:8080
  
