--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
 	"type": "module",
 	"dependencies": {
 		"@types/pg": "^8.11.6",
+		"@types/uuid": "^10.0.0",
 		"dotenv": "^16.4.5",
-		"pg": "^8.12.0"
+		"pg": "^8.12.0",
+		"uuid": "^10.0.0"
 	}
 }
