--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@types/bcrypt": "^5.0.2",
 		"@types/pg": "^8.11.6",
 		"@types/uuid": "^10.0.0",
+		"bcrypt": "^5.1.1",
 		"dotenv": "^16.4.5",
 		"pg": "^8.12.0",
 		"uuid": "^10.0.0"
