Add docker stuff

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,19 +1,23 @@
 services:
-  db:
-    image: postgres
-    # restart: always
-    environment:
-      POSTGRES_PASSWORD: example
-    volumes:
-      - pgdata:/var/lib/postgresql/data 
+  cb:
+    build: .
     ports:
-      - 5432:5432
- 
-  adminer:
-    image: adminer
-    # restart: always
-    ports:
-      - 8080:8080
- 
-volumes:
-  pgdata:
+      - "3000:3000"
+#   db:
+#     image: postgres
+#     # restart: always
+#     environment:
+#       POSTGRES_PASSWORD: example
+#     volumes:
+#       - pgdata:/var/lib/postgresql/data 
+#     ports:
+#       - 5432:5432
+#  
+#   adminer:
+#     image: adminer
+#     # restart: always
+#     ports:
+#       - 8080:8080
+#  
+# volumes:
+#   pgdata:
