--- a/compose.yaml
+++ b/compose.yaml
@@ -3,21 +3,20 @@ services:
     build: .
     ports:
       - "3000:3000"
-#   db:
-#     image: postgres
-#     # restart: always
-#     environment:
-#       POSTGRES_PASSWORD: example
-#     volumes:
-#       - pgdata:/var/lib/postgresql/data 
-#     ports:
-#       - 5432:5432
-#  
-#   adminer:
-#     image: adminer
-#     # restart: always
-#     ports:
-#       - 8080:8080
-#  
-# volumes:
-#   pgdata:
+  db:
+    image: postgres
+    environment:
+      POSTGRES_PASSWORD: example
+    volumes:
+      - pgdata:/var/lib/postgresql/data 
+    ports:
+      - 5432:5432
+ 
+  adminer:
+    image: adminer
+    # restart: always
+    ports:
+      - 8080:8080
+ 
+volumes:
+  pgdata:
