--- a/.sops.yaml
+++ b/.sops.yaml
@@ -9,8 +9,8 @@ creation_rules:
     key_groups:
       - age:
         - *skyrim
-      # - pgp:
-      #   - *cody
+      - pgp:
+        - *cody
   - path_regex: hosts/morrowind/secrets.yaml$
     key_groups:
       - age:
